obtener dataset a partir de url  drive

--- a/prediccion de supervivencia.ipynb
+++ b/prediccion de supervivencia.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "ab5a5c2d-b85a-4457-ad33-b068742a41eb",
    "metadata": {},
    "outputs": [],
@@ -34,33 +34,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "e9aec802-efed-443a-a0b0-5098632ac41e",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Dataset path obtenido correctamente\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'\\nif not os.path.exists(dataset_path):\\n    print(f\"El Dataset Path NO existe :(.\")\\n    sys.exit(1) \\nelse:\\n    print(f\"Dataset path obtenido correctamente\")\\n'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Obtener directorio actual\n",
-    "current_dir = os.getcwd()\n",
-    "dataset_path = os.path.join(current_dir, 'dataset', 'dataset_med.csv')\n",
+    "#current_dir = os.getcwd()\n",
+    "#dataset_path = os.path.join(current_dir, 'dataset', 'dataset_med.csv')\n",
     "# Verificar dataset path\n",
+    "\"\"\"\n",
     "if not os.path.exists(dataset_path):\n",
     "    print(f\"El Dataset Path NO existe :(.\")\n",
     "    sys.exit(1) \n",
     "else:\n",
-    "    print(f\"Dataset path obtenido correctamente\")"
+    "    print(f\"Dataset path obtenido correctamente\")\n",
+    "\"\"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "id": "c5e3f1b7-544c-4a2d-aff3-a6bdf4b5ce15",
    "metadata": {},
    "outputs": [
@@ -195,7 +200,8 @@
    ],
    "source": [
     "## Crear un dataframe y obtener informacion de las columnas \n",
-    "df = pd.read_csv(dataset_path, header = 0)\n",
+    "## Obtener Dataset a partir de una URL (Google Drive)\n",
+    "df = pd.read_csv('https://drive.google.com/uc?export=download&id=1WzIWYlMhHuhe6f6SadMaSlDfT2iNZWSo', header = 0)\n",
     "\n",
     "# Tipos de datos y nulos\n",
     "print(\"============ TIPOS DE DATOS Y NULOS ===========\\n\")\n",
